--- a/mscustomer/src/main/resources/application.properties
+++ b/mscustomer/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=mscustomer
+#debug
+logging.level.org.springframework.web=debug
+
+#bd
+spring.datasource.url=jdbc:postgresql://localhost:5432/msCustomer
+spring.datasource.username=postgres
+spring.datasource.password=01
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
